add piggy image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+<title>Microtip</title>
+</head>
+<style type="text/css">
+body {
+	margin: 0;
+	padding: 0;
+	background: url('microtip.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+</style>
+<body>
+</body>
+</html>
